2008-10-28  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tk.h:		Add "const" to a few struct member fields.
	* generic/tkInt.h:	CONSTify TkPrintPadAmount
	* generic/tkSelect.h:	move TkSelGetSelection to tkInt.decls
	* generic/tk.decls:	CONSTify Tk_ParseArgv
	* generic/tkInt.decls:	CONSTify TkCreateFrame and TkCreateMainWindow
	* generic/tkDecls.h:	(regenerated)
	* generic/tkIntDecls.h:	(regenerated)
	* generic/tkArgv.c:
	* generic/tkAtom.c:
	* generic/tkEntry.c:
	* generic/tkFrame.c:
	* generic/tkImgPhoto.c:
	* generic/tkPack.c:
	* generic/tkSelect.c:
	* generic/tkVisual.c:
	* generic/tkWindow.c:
	* win/tkWinTest.c:	fix compilation under mingw32

2008-10-28  Joe English  <jenglish@users.sourceforge.net>

	* library/ttk/cursors.tcl, library/ttk/combobox.tcl,
	library/ttk/entry.tcl, library/ttk/paned.tcl, library/ttk/sizegrip.tcl,
	library/treeview.tcl:
	Add correct platform-specific cursors for OSX [Bug 2054562]
	Expanded set of symbolic cursors.  Use correct cursor for 
	ttk::entry and ttk::combobox widgets [Bug 1534835]

2008-10-28  Don Porter  <dgp@users.sourceforge.net>

	* win/tkWinTest.c:		Revise [testclipboard] to form that
	* tests/winClipboard.test:	handles encodings.  [Bug 2191960]
	* tests/constraints.tcl: [tcltest::bytestring] no longer used.

2008-10-24  Joe English  <jenglish@users.sourceforge.net>

	* tests/ttk/ttk.test: Disable test ttk-6.3, it's not 
	applicable [Bug 2175411].

	* generic/ttk/ttkTheme.c: Use different Tcl_AssocData key
	so the tile extension can be loaded into an 8.6 interp,
	in the off-chance that anyone wants to do this.

2008-10-24  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tkCanvUtil.c (TkSmoothPrintProc): Corrected 'const'ness to
	quell warning. [Bug 2190619]

2008-10-23  Don Porter  <dgp@users.sourceforge.net>

	* README:		Bump version number to 8.6a4
	* generic/tk.h:
	* library/tk.tcl:
	* unix/configure.in:
	* unix/tk.spec:
	* win/configure.in:

	* unix/configure:	autoconf-2.59
	* win/configure:
