@@ -12,7 +12,7 @@
  * See the file "license.terms" for information on usage and redistribution of
  * this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tkAtom.c,v 1.9 2008/10/28 22:33:06 nijtmans Exp $
+ * RCS: @(#) $Id: tkAtom.c,v 1.10 2008/10/29 23:31:55 jenglish Exp $
  */
 
 #include "tkInt.h"
@@ -80,8 +80,8 @@ Tk_InternAtom(
 				 * window's display. */
     const char *name)		/* Name to turn into atom. */
 {
-    register TkDisplay *dispPtr;
-    register Tcl_HashEntry *hPtr;
+    TkDisplay *dispPtr;
+    Tcl_HashEntry *hPtr;
     int isNew;
 
     dispPtr = ((TkWindow *) tkwin)->dispPtr;
@@ -129,8 +129,8 @@ Tk_GetAtomName(
 				 * this window's display. */
     Atom atom)			/* Atom whose name is wanted. */
 {
-    register TkDisplay *dispPtr;
-    register Tcl_HashEntry *hPtr;
+    TkDisplay *dispPtr;
+    Tcl_HashEntry *hPtr;
 
     dispPtr = ((TkWindow *) tkwin)->dispPtr;
     if (!dispPtr->atomInit) {
@@ -139,7 +139,7 @@ Tk_GetAtomName(
 
     hPtr = Tcl_FindHashEntry(&dispPtr->atomTable, (char *) atom);
     if (hPtr == NULL) {
-	const char *name;
+	char *name;
 	Tk_ErrorHandler handler;
 	int isNew, mustFree;
 
@@ -182,7 +182,7 @@ Tk_GetAtomName(
 
 static void
 AtomInit(
-    register TkDisplay *dispPtr)/* Display to initialize. */
+    TkDisplay *dispPtr)/* Display to initialize. */
 {
     Tcl_HashEntry *hPtr;
     Atom atom;
